--- a/docs/01.语言/01.Go/14.chan.md
+++ b/docs/01.语言/01.Go/14.chan.md
@@ -120,7 +120,7 @@ func (q *waitq) dequeue() *sudog {
 }
 ```
 :::
-* waitq 定义了一个** goroutine 的队列**结构，分别存储了指向队列头部和尾部的 goroutine 指针，并定义了进出队列的方法；
+* waitq 定义了一个**goroutine 的队列**结构，分别存储了指向队列头部和尾部的 goroutine 指针，并定义了进出队列的方法；
 * enqueue 将 goroutine 添加到该队列的尾部，并更新指向尾部的指针；
 * dequeue 从队列头部中取出一个 goroutine，并更新指向队列头部的指针；
 
@@ -187,24 +187,6 @@ func makechan(t *chantype, size int) *hchan {
 * 否则，说明元素是含有指针类型的元素，对 hchan 和数组分别申请内存，以方便 gc 进行内存回收；
 
 ### 4，chansend
-* chansend 用于向管道中写入数据，对于当前 goroutine 是否允许被阻塞，分为不同的处理方式；
-* 如果 chan 为 nil，非阻塞模式下直接返回，阻塞模式下 goroutine 被挂起，会一直休眠陷入死锁，故直接抛出错误并退出，错误内容："fatal error: all goroutines are asleep - deadlock!"；
-* 如果 chan 不为 nil，非阻塞模式，且 chan 没有关闭，但已经满了，则直接返回，即在不获取锁的情况下快速处理；
-* 如果 chan 已经关闭，则直接 panic，即向一个关闭的通道写入数据会 panic；
-* 尝试从消费者队列中取出一个 goroutine，如果能够能够取到，无论是阻塞模式还是非阻塞模式，直接将数据从生产者的 goroutine 拷贝到消费者的 goroutine，并提前返回；如果当前管道是缓冲管道且又能够从消费者队列获取 goroutine 则说明缓冲区为空，直接拷贝能够避免将数据先从生产者 goroutine 拷贝到缓冲区再从缓冲区拷贝到消费者 goroutine 的二次拷贝带来的性能损耗；
-* 如果没有消费者，且缓冲区未满，即使非阻塞也是能写则写，直接将数据从生产者 goroutine 拷贝到缓冲区写入索引处，并更新写入索引和元素个数，提前返回；
-* 如果没有消费者，且缓冲区已满，无论是缓冲管道还是非缓冲管道，生产者 goroutine 此时是无法写入数据的，对于非阻塞模式，直接返回；
-* 对于阻塞模式，将该 goroutine 添加到该 chan 的生产者队列，并挂起阻塞等待直到被唤醒，唤醒的方式分为两种：
-  * 消费者 goroutine 从生产者队列中获取到该 goroutine 并从其拷贝数据，将其唤醒；
-  * 该 chan 被关闭了，唤醒所有的等待的 goroutine；
-* 在被其他 goroutine 唤醒前，会先将其从 chan 的生产队列中出队；
-* 被唤醒后，该 goroutine 会与当前的 chan 解除绑定，并判断被唤醒的原因，如果是因为 chan 关闭而被唤醒则直接 panic，即无法向一个关闭的 chan 写数据；
-* send 处理空通道 c 上的写入操作，生产者 goroutine 上待写入的值 ep 被复制到消费者 sg，然后该消费者被唤醒，通道 c 必须为空并锁定（此时才能直接在生产者和消费者两个 goroutine 之间拷贝数据）；
-
-::: tips
-对于缓冲管道，当消费队列不为空时，说明管道中没有数据；当生产队列不为空时，说明管道已经满了；不可能同时存在消费队列和生产队列都不为空的情况？？？
-对于非缓冲管道，当消费队列不为空时，说明此时生产队列为空，消费队列被阻塞等待中；当生产队列不为空时，说明消费队列为空，生产队列被阻塞等待中；
-:::
 ::: details
 ```go
 // go:nosplit 编译代码中 c <- X 的入口点
@@ -373,18 +355,33 @@ func sendDirect(t *_type, sg *sudog, src unsafe.Pointer) {
 }
 ```
 :::
+* chansend 用于向管道中写入数据，对于当前 goroutine 是否允许被阻塞，分为不同的处理方式；
+* 如果 chan 为 nil，非阻塞模式下直接返回，阻塞模式下 goroutine 被挂起，会一直休眠陷入死锁，故直接抛出错误并退出，错误内容："fatal error: all goroutines are asleep - deadlock!"；
+* 如果 chan 不为 nil，非阻塞模式，且 chan 没有关闭，但已经满了，则直接返回，即在不获取锁的情况下快速处理；
+* 如果 chan 已经关闭，则直接 panic，即向一个关闭的通道写入数据会 panic；
+* 尝试从消费者队列中取出一个 goroutine，如果能够能够取到，无论是阻塞模式还是非阻塞模式，直接将数据从生产者的 goroutine 拷贝到消费者的 goroutine，并提前返回；如果当前管道是缓冲管道且又能够从消费者队列获取 goroutine 则说明缓冲区为空，直接拷贝能够避免将数据先从生产者 goroutine 拷贝到缓冲区再从缓冲区拷贝到消费者 goroutine 的二次拷贝带来的性能损耗；
+* 如果没有消费者，且缓冲区未满，即使非阻塞也是能写则写，直接将数据从生产者 goroutine 拷贝到缓冲区写入索引处，并更新写入索引和元素个数，提前返回；
+* 如果没有消费者，且缓冲区已满，无论是缓冲管道还是非缓冲管道，生产者 goroutine 此时是无法写入数据的，对于非阻塞模式，直接返回；
+* 对于阻塞模式，将该 goroutine 添加到该 chan 的生产者队列，并挂起阻塞等待直到被唤醒，唤醒的方式分为两种：
+  * 消费者 goroutine 从生产者队列中获取到该 goroutine 并从其拷贝数据，将其唤醒；
+  * 该 chan 被关闭了，唤醒所有的等待的 goroutine；
+* 在被其他 goroutine 唤醒前，会先将其从 chan 的生产队列中出队；
+* 被唤醒后，该 goroutine 会与当前的 chan 解除绑定，并判断被唤醒的原因，如果是因为 chan 关闭而被唤醒则直接 panic，即无法向一个关闭的 chan 写数据；
+* send 处理空通道 c 上的写入操作，生产者 goroutine 上待写入的值 ep 被复制到消费者 sg，然后该消费者被唤醒，通道 c 必须为空并锁定（此时才能直接在生产者和消费者两个 goroutine 之间拷贝数据）；
+
+::: tip
+1，对于缓冲管道，当消费队列不为空时，说明管道中没有数据；当生产队列不为空时，说明管道已经满了；（不可能同时存在消费队列和生产队列都不为空的情况？？？）<br>
+2，对于非缓冲管道，当消费队列不为空时，说明此时生产队列为空，消费队列被阻塞等待中；当生产队列不为空时，说明消费队列为空，生产队列被阻塞等待中；
+:::
 
 ### chanrecv
 ::: details
 ```go
-// entry points for <- c from compiled code
-//go:nosplit
 // <- c 代码的编译入口
 func chanrecv1(c *hchan, elem unsafe.Pointer) {
 	chanrecv(c, elem, true)
 }
 
-//go:nosplit
 func chanrecv2(c *hchan, elem unsafe.Pointer) (received bool) {
 	_, received = chanrecv(c, elem, true)
 	return
@@ -601,5 +598,197 @@ func recvDirect(t *_type, sg *sudog, dst unsafe.Pointer) {
 ```
 :::
 
+
+### closechan
+::: details
+```go
+
+// 关闭 channel 后，对于等待接收者而言，会收到一个相应类型的零值。对于等待发送者，会直接 panic。
+// 所以，在不了解 channel 还有没有接收者的情况下，不能贸然关闭 channel。
+// close 函数先上一把大锁，接着把所有挂在这个 channel 上的 sender 和 receiver 全都连成一个 sudog 链表，再解锁。最后，再将所有的 sudog 全都唤醒。
+// 唤醒之后，该干嘛干嘛。sender 会继续执行 chansend 函数里 goparkunlock 函数之后的代码，很不幸，检测到 channel 已经关闭了，panic。receiver 则比较幸运，进行一些扫尾工作后，
+func closechan(c *hchan) {
+	if c == nil { // todo 关闭一个空的 chan 会 panic
+		panic(plainError("close of nil channel"))
+	}
+	// 加锁，这个锁的粒度比较大，会持续到释放完所有的 sudog 才解锁
+	lock(&c.lock)
+	if c.closed != 0 { // todo 关闭一个已经关闭的 chan 会 panic
+		unlock(&c.lock)
+		panic(plainError("close of closed channel"))
+	}
+
+	if raceenabled {
+		callerpc := getcallerpc()
+		racewritepc(c.raceaddr(), callerpc, funcPC(closechan))
+		racerelease(c.raceaddr())
+	}
+
+	c.closed = 1    // 设置 channel 状态为已关闭
+	var glist gList // 用于存放发送+接收队列中的所有 goroutine
+
+	// 将接收队列中所有 goroutine 加入 gList 列表
+	for {
+		// 如果此通道的接收数据协程队列不为空（这种情况下，缓冲队列必为空），
+		// 此队列中的所有协程将被依个弹出，并且每个协程将接收到此通道的元素类型的一个零值，然后恢复至运行状态
+		sg := c.recvq.dequeue()
+		if sg == nil {
+			// 出队的 sudog 为 nil，说明发送队列为空，直接跳出循环
+			break
+		}
+		// 如果 elem 不为空，说明此 receiver 未忽略接收数据，给它赋一个相应类型的零值
+		if sg.elem != nil {
+			typedmemclr(c.elemtype, sg.elem)
+			sg.elem = nil
+		}
+		if sg.releasetime != 0 {
+			sg.releasetime = cputicks()
+		}
+		// 取出 goroutine
+		gp := sg.g
+		gp.param = unsafe.Pointer(sg)
+		sg.success = false // todo import 因为关闭而唤醒，设为false
+		if raceenabled {
+			raceacquireg(gp, c.raceaddr())
+		}
+		glist.push(gp) // 将 sg 对应的 goroutine 添加到 glist 列表
+
+	}
+
+	// 将发送队列中所有 goroutine 加入 gList 列表
+	// todo 如果存在，这些 goroutine 将会 panic，在写入处引发panic
+	for {
+		// 如果此通道的发送数据协程队列不为空，此队列中的所有协程将被依个弹出，并且每个协程中都将产生一个 panic（因为向已关闭的通道发送数据）。
+		sg := c.sendq.dequeue()
+		if sg == nil {
+			break // 出队的 sudog 为 nil，说明发送队列为空，直接跳出循环
+		}
+
+		sg.elem = nil // 忽略发送协程的值
+		if sg.releasetime != 0 {
+			sg.releasetime = cputicks()
+		}
+		gp := sg.g
+		gp.param = unsafe.Pointer(sg)
+		sg.success = false // todo import 因为关闭而唤醒，设为false
+		if raceenabled {
+			raceacquireg(gp, c.raceaddr())
+		}
+
+		glist.push(gp) // 将 sg 对应的 goroutine 添加到 glist 列表
+	}
+
+	unlock(&c.lock) // 解锁
+
+	// 准备好所有 G，现在我们已经删除了通道锁。
+	for !glist.empty() {
+		gp := glist.pop()
+		gp.schedlink = 0
+		// 唤醒所有线程，接收队列里的协程获取零值，继续后续执行，发送队列里的协程，触发panic
+		goready(gp, 3)
+		// 	唤醒发送和接收协程，发送协程从 chansend 中的 gopark 后开始执行；接收协程从 chanrecv 中的 gopark 后开始执行
+	}
+}
+
+```
+:::
+
+### selectnb*
+::: details
+```go
+// compiler implements
+//
+//	select {
+//	case c <- v:
+//		... foo
+//	default:
+//		... bar
+//	}
+//
+// as
+//
+//	if selectnbsend(c, v) {
+//		... foo
+//	} else {
+//		... bar
+//	}
+//
+// select case 编译时，发送数据为非阻塞，即非阻塞型
+// todo must important, 没有default时，select case 编译成 chansend1(c *hchan, elem unsafe.Pointer)，即阻塞型
+func selectnbsend(c *hchan, elem unsafe.Pointer) (selected bool) {
+	return chansend(c, elem, false, getcallerpc())
+}
+
+// compiler implements
+//
+//	select {
+//	case v, ok = <-c:
+//		... foo
+//	default:
+//		... bar
+//	}
+//
+// as
+//
+//	if selected, ok = selectnbrecv(&v, c); selected {
+//		... foo
+//	} else {
+//		... bar
+//	}
+// select case 编译时，接收数据为非阻塞，即非阻塞型
+// todo must important, 没有default时，select case 编译成 chanrecv1(c *hchan, elem unsafe.Pointer)，即阻塞型
+// 3. 所有case都未ready，且没有default语句
+//   3.1 将当前协程加入到所有channel的等待队列
+//   3.2 当将协程转入阻塞，等待被唤醒
+func selectnbrecv(elem unsafe.Pointer, c *hchan) (selected, received bool) {
+	return chanrecv(c, elem, false)
+}
+```
+:::
+
+### other
+:::details
+```go
+
+// chanbuf 获取 buf 中第 i 个位置的元素
+func chanbuf(c *hchan, i uint) unsafe.Pointer {
+	return add(c.buf, uintptr(i)*uintptr(c.elemsize))
+}
+
+// full 函数检测 channel 缓冲区是否已满，主要分为两种情况:
+// 如果 channel 没有缓冲区，查看是否存在接收者
+// 如果 channel 有缓冲区, 比较元素数量和缓冲区长度是否一致
+func full(c *hchan) bool {
+	// c.dataqsiz 是不可变的（在创建通道后永远不会写入），因此在通道操作期间随时读取是安全的。
+	if c.dataqsiz == 0 {
+		// 无缓冲，且没有消费队列
+		return c.recvq.first == nil
+	}
+	// 有缓冲，且缓冲区大小和chan中实际元素个数相等，即满了
+	return c.qcount == c.dataqsiz
+}
+
+// 判断 c 是否为空
+func empty(c *hchan) bool {
+	if c.dataqsiz == 0 {
+		// 无缓冲 channel 并且没有发送方正在阻塞
+		return atomic.Loadp(unsafe.Pointer(&c.sendq.first)) == nil
+	}
+	// 有缓冲 channel 并且缓冲区没有数据
+	return atomic.Loaduint(&c.qcount) == 0
+}
+
+func chanparkcommit(gp *g, chanLock unsafe.Pointer) bool {
+	// 有未解锁的 sudogs 指向 gp 的堆栈。堆栈复制必须锁定那些 sudogs 的通道。
+	// 在这里设置 activeStackChans，而不是在我们尝试 park 之前，因为我们可能在通道锁上的堆栈增长中陷入死锁。
+	gp.activeStackChans = true
+	// 标记栈收缩发生在现在是安全的，因为任何获取这个G的栈进行收缩的线程都保证会在这个存储之后观察到activeStackChans。
+	atomic.Store8(&gp.parkingOnChan, 0)
+	// 确保我们在设置activeStackChans和取消设置parkingOnChan后解锁。在我们解锁chanLock的那一刻，我们就冒着gp准备好通道操作的风险，所以gp可以在解锁可见之前(甚至对gp本身)继续运行。
+	unlock((*mutex)(chanLock))
+	return true
+}
+```
+:::
 > **参考文章**<br>
 > [1] [二郎腿的博客](https://erlangtui.top)<br>
