--- a/docs/01.语言/01.Go/14.chan.md
+++ b/docs/01.语言/01.Go/14.chan.md
@@ -374,7 +374,7 @@ func sendDirect(t *_type, sg *sudog, src unsafe.Pointer) {
 2，对于非缓冲管道，当消费队列不为空时，说明此时生产队列为空，消费队列被阻塞等待中；当生产队列不为空时，说明消费队列为空，生产队列被阻塞等待中；
 :::
 
-### chanrecv
+### 5，chanrecv
 ::: details
 ```go
 // <- c 代码的编译入口
@@ -599,10 +599,9 @@ func recvDirect(t *_type, sg *sudog, dst unsafe.Pointer) {
 :::
 
 
-### closechan
+### 6，closechan
 ::: details
 ```go
-
 // 关闭 channel 后，对于等待接收者而言，会收到一个相应类型的零值。对于等待发送者，会直接 panic。
 // 所以，在不了解 channel 还有没有接收者的情况下，不能贸然关闭 channel。
 // close 函数先上一把大锁，接着把所有挂在这个 channel 上的 sender 和 receiver 全都连成一个 sudog 链表，再解锁。最后，再将所有的 sudog 全都唤醒。
@@ -693,7 +692,7 @@ func closechan(c *hchan) {
 ```
 :::
 
-### selectnb*
+### 7，selectnb*
 ::: details
 ```go
 // compiler implements
@@ -746,10 +745,9 @@ func selectnbrecv(elem unsafe.Pointer, c *hchan) (selected, received bool) {
 ```
 :::
 
-### other
+### 8，辅助函数
 :::details
 ```go
-
 // chanbuf 获取 buf 中第 i 个位置的元素
 func chanbuf(c *hchan, i uint) unsafe.Pointer {
 	return add(c.buf, uintptr(i)*uintptr(c.elemsize))
