--- a/docs/01.语言/01.Go/14.chan.md
+++ b/docs/01.语言/01.Go/14.chan.md
@@ -7,33 +7,42 @@ categories:
   - Go
 tags:
   - 并发
-author: 
+author:
   name: erlangtui
   link: https://github.com/erlangtui
 ---
+
 ::: tip
 本文代码基于 go1.17.13，src/runtime/chan.go
 :::
+
 ## 一、简述
-* ……
+
+- ……
 
 ## 二、基本原理
-* <span style="color: red;">基本的实现逻辑</span>
+
+- <span style="color: red;">基本的实现逻辑</span>
 
 ## 三、基本用法
+
 ### 1，应用场景
 
 ### 2，注意事项
-* <span style="color: red;">**关闭一个 nil 管道会 panic；**</span>
-* <span style="color: red;">**关闭一个已经关闭的管道会 panic；**</span>
-* <span style="color: red;">**向一个已经关闭的管道写数据会 panic；**</span>
-* <span style="color: red;">**向一个 nil 管道读写数据会永久阻塞；**</span>
+
+- <span style="color: red;">**关闭一个 nil 管道会 panic；**</span>
+- <span style="color: red;">**关闭一个已经关闭的管道会 panic；**</span>
+- <span style="color: red;">**向一个已经关闭的管道写数据会 panic；**</span>
+- <span style="color: red;">**向一个 nil 管道读写数据会永久阻塞；**</span>
 
 ### 3，简单示例
 
 ## 四、源码解读
+
 ### 1，hchan
+
 ::: details
+
 ```go
 type hchan struct {
 	qcount   uint           // chan 中的数据量
@@ -59,12 +68,16 @@ const (
 	debugChan = false
 )
 ```
+
 :::
-* hchan 是 chan 的结构体类型，其底层是一个数组，包含数组的地址、长度、数组中元素的个数、元素的大小、元素的类型，以及生产队列、消费队列及其对应的索引；
-* hchanSize 表示了 hchan 结构体所占内存字节数，进行了**字节对齐**，对齐单位为 maxAlign；
+
+- hchan 是 chan 的结构体类型，其底层是一个数组，包含数组的地址、长度、数组中元素的个数、元素的大小、元素的类型，以及生产队列、消费队列及其对应的索引；
+- hchanSize 表示了 hchan 结构体所占内存字节数，进行了**字节对齐**，对齐单位为 maxAlign；
 
 ### 2，waitq
+
 ::: details
+
 ```go
 // goroutine 的生产队列或消费队列
 type waitq struct {
@@ -119,13 +132,17 @@ func (q *waitq) dequeue() *sudog {
 	}
 }
 ```
+
 :::
-* waitq 定义了一个**goroutine 的队列**结构，分别存储了指向队列头部和尾部的 goroutine 指针，并定义了进出队列的方法；
-* enqueue 将 goroutine 添加到该队列的尾部，并更新指向尾部的指针；
-* dequeue 从队列头部中取出一个 goroutine，并更新指向队列头部的指针；
+
+- waitq 定义了一个**goroutine 的队列**结构，分别存储了指向队列头部和尾部的 goroutine 指针，并定义了进出队列的方法；
+- enqueue 将 goroutine 添加到该队列的尾部，并更新指向尾部的指针；
+- dequeue 从队列头部中取出一个 goroutine，并更新指向队列头部的指针；
 
 ### 3，makechan
+
 ::: details
+
 ```go
 func makechan(t *chantype, size int) *hchan {
 	elem := t.elem
@@ -172,22 +189,22 @@ func makechan(t *chantype, size int) *hchan {
 	c.elemtype = elem                // 元素类型
 	c.dataqsiz = uint(size)          // chan 的容量
 	lockInit(&c.lock, lockRankHchan) // todo ？
-
-	if debugChan {
-		print("makechan: chan=", c, "; elemsize=", elem.size, "; dataqsiz=", size, "\n")
-	}
 	return c
 }
 ```
+
 :::
-* 此函数用于根据元素类型和管道长度申请内存以创建 chan，通过 make 创建 chan 时会调用此函数；
-* 首先会对元素类型和元素大小进行校验，以及根据元素大小和管道长度计算需要申请的数组内存大小，并判断是否越界；
-* 当需要申请的数组内存大小为 0 时，说明创建是无缓冲或元素为空结构体的管道，此时只需要申请 hchan 结构体的内存；
-* 当需要申请的数组内存大小不为 0 时，且元素是不含指针的类型，则直接将 hchan 结构体和数组一起申请内存，只需要调用mallocgc一次即可分配完成，数组的内存在 hchan 之后，并将数组内存的首地址赋给 buf 字段；
-* 否则，说明元素是含有指针类型的元素，对 hchan 和数组分别申请内存，以方便 gc 进行内存回收；
+
+- 此函数用于根据元素类型和管道长度申请内存以创建 chan，通过 make 创建 chan 时会调用此函数；
+- 首先会对元素类型和元素大小进行校验，以及根据元素大小和管道长度计算需要申请的数组内存大小，并判断是否越界；
+- **当需要申请的数组内存大小为 0 时，说明创建是无缓冲或元素为空结构体的管道，此时只需要申请 hchan 结构体的内存**；
+- <span style="color: red;">**当需要申请的数组内存大小不为 0 时，且元素是不含指针的类型，则直接将 hchan 结构体和数组一起申请内存，只需要调用 mallocgc 一次即可分配完成，数组的内存在 hchan 之后，并将数组内存的首地址赋给 buf 字段**</span>；
+- <span style="color: red;">**当需要申请的数组内存大小不为 0 时，且元素是含指针的类型，对 hchan 和数组分别申请内存，以方便 gc 进行内存回收**</span>；
 
 ### 4，chansend
+
 ::: details
+
 ```go
 // go:nosplit 编译代码中 c <- X 的入口点
 func chansend1(c *hchan, elem unsafe.Pointer) {
@@ -354,20 +371,24 @@ func sendDirect(t *_type, sg *sudog, src unsafe.Pointer) {
 	memmove(dst, src, t.size)
 }
 ```
+
 :::
-* chansend 用于向管道中写入数据，对于当前 goroutine 是否允许被阻塞，分为不同的处理方式；
-* 如果 chan 为 nil，非阻塞模式下直接返回，阻塞模式下 goroutine 被挂起，会一直休眠陷入死锁，故直接抛出错误并退出，错误内容："fatal error: all goroutines are asleep - deadlock!"；
-* 如果 chan 不为 nil，非阻塞模式，且 chan 没有关闭，但已经满了，则直接返回，即在不获取锁的情况下快速处理；
-* 如果 chan 已经关闭，则直接 panic，即向一个关闭的通道写入数据会 panic；
-* 尝试从消费者队列中取出一个 goroutine，如果能够能够取到，无论是阻塞模式还是非阻塞模式，直接将数据从生产者的 goroutine 拷贝到消费者的 goroutine，并提前返回；如果当前管道是缓冲管道且又能够从消费者队列获取 goroutine 则说明缓冲区为空，直接拷贝能够避免将数据先从生产者 goroutine 拷贝到缓冲区再从缓冲区拷贝到消费者 goroutine 的二次拷贝带来的性能损耗；
-* 如果没有消费者，且缓冲区未满，即使非阻塞也是能写则写，直接将数据从生产者 goroutine 拷贝到缓冲区写入索引处，并更新写入索引和元素个数，提前返回；
-* 如果没有消费者，且缓冲区已满，无论是缓冲管道还是非缓冲管道，生产者 goroutine 此时是无法写入数据的，对于非阻塞模式，直接返回；
-* 对于阻塞模式，将该 goroutine 添加到该 chan 的生产者队列，并挂起阻塞等待直到被唤醒，唤醒的方式分为两种：
-  * 消费者 goroutine 从生产者队列中获取到该 goroutine 并从其拷贝数据，将其唤醒；
-  * 该 chan 被关闭了，唤醒所有的等待的 goroutine；
-* 在被其他 goroutine 唤醒前，会先将其从 chan 的生产队列中出队；
-* 被唤醒后，该 goroutine 会与当前的 chan 解除绑定，并判断被唤醒的原因，如果是因为 chan 关闭而被唤醒则直接 panic，即无法向一个关闭的 chan 写数据；
-* send 处理空通道 c 上的写入操作，生产者 goroutine 上待写入的值 ep 被复制到消费者 sg，然后该消费者被唤醒，通道 c 必须为空并锁定（此时才能直接在生产者和消费者两个 goroutine 之间拷贝数据）；
+
+- chansend 用于向管道中写入数据，对于当前 goroutine 是否允许被阻塞，分为不同的处理方式；
+- <span style="color: red;">**如果 chan 为 nil，非阻塞模式下直接返回，阻塞模式下 goroutine 被挂起，会一直休眠陷入死锁，故直接抛出错误并退出**</span>，错误内容："fatal error: all goroutines are asleep - deadlock!"；
+- 如果 chan 不为 nil，非阻塞模式，且 chan 没有关闭，但已经满了，则直接返回，即在不获取锁的情况下快速处理；
+- <span style="color: red;">**如果 chan 已经关闭，则直接 panic，即向一个关闭的通道写入数据会 panic**</span>；
+- 尝试从消费者队列中取出一个 goroutine：
+  - 如果能够能够取到，无论是阻塞模式还是非阻塞模式，<span style="color: red;">**直接将数据从生产者的 goroutine 拷贝到消费者的 goroutine**</span> 并提前返回；
+  - 如果当前管道是缓冲管道且又能够从消费者队列获取 goroutine 则说明缓冲区为空，<span style="color: red;">**直接拷贝能够避免将数据先从生产者 goroutine 拷贝到缓冲区再从缓冲区拷贝到消费者 goroutine 的二次拷贝带来的性能损耗**</span>；
+- 如果没有消费者，且缓冲区未满，即使非阻塞也是能写则写，直接将数据从生产者 goroutine 拷贝到缓冲区写入索引处，并更新写入索引和元素个数，提前返回；
+- 如果没有消费者，且缓冲区已满，无论是缓冲管道还是非缓冲管道，生产者 goroutine 此时是无法写入数据的，对于非阻塞模式，直接返回；
+- 对于阻塞模式，<span style="color: red;">**将该 goroutine 添加到该 chan 的生产者队列，并挂起阻塞等待直到被唤醒**</span>，唤醒的方式分为两种：
+  - <span style="color: red;">**消费者 goroutine 从生产者队列中获取到该 goroutine 并从其拷贝数据，将其唤醒**</span>；
+  - <span style="color: red;">**该 chan 被关闭了，唤醒所有的等待的 goroutine**</span>；
+- 在被其他 goroutine 唤醒前，会先将其从 chan 的生产队列中出队；
+- 被唤醒后，该 goroutine 会与当前的 chan 解除绑定，并判断被唤醒的原因，<span style="color: red;">**如果是因为 chan 关闭而被唤醒则直接 panic，即无法向一个关闭的 chan 写数据**</span>；
+- send 处理空管道 c 上的写入操作，生产者 goroutine 上待写入的值 ep 被复制到消费者 sg，然后该消费者被唤醒，管道 c 必须为空并锁定（此时才能直接在生产者和消费者两个 goroutine 之间拷贝数据）；
 
 ::: tip
 1，对于缓冲管道，当消费队列不为空时，说明管道中没有数据；当生产队列不为空时，说明管道已经满了；（不可能同时存在消费队列和生产队列都不为空的情况？？？）<br>
@@ -375,7 +396,9 @@ func sendDirect(t *_type, sg *sudog, src unsafe.Pointer) {
 :::
 
 ### 5，chanrecv
+
 ::: details
+
 ```go
 // <- c 代码的编译入口
 func chanrecv1(c *hchan, elem unsafe.Pointer) {
@@ -596,11 +619,13 @@ func recvDirect(t *_type, sg *sudog, dst unsafe.Pointer) {
 	memmove(dst, src, t.size)
 }
 ```
+
 :::
 
-
 ### 6，closechan
+
 ::: details
+
 ```go
 // 关闭 channel 后，对于等待接收者而言，会收到一个相应类型的零值。对于等待发送者，会直接 panic。
 // 所以，在不了解 channel 还有没有接收者的情况下，不能贸然关闭 channel。
@@ -690,10 +715,13 @@ func closechan(c *hchan) {
 }
 
 ```
+
 :::
 
-### 7，selectnb*
+### 7，selectnb\*
+
 ::: details
+
 ```go
 // compiler implements
 //
@@ -743,10 +771,13 @@ func selectnbrecv(elem unsafe.Pointer, c *hchan) (selected, received bool) {
 	return chanrecv(c, elem, false)
 }
 ```
+
 :::
 
 ### 8，辅助函数
+
 :::details
+
 ```go
 // chanbuf 获取 buf 中第 i 个位置的元素
 func chanbuf(c *hchan, i uint) unsafe.Pointer {
@@ -787,6 +818,7 @@ func chanparkcommit(gp *g, chanLock unsafe.Pointer) bool {
 	return true
 }
 ```
+
 :::
-> **参考文章**<br>
-> [1] [二郎腿的博客](https://erlangtui.top)<br>
+
+> **参考文章**<br> > [1] [二郎腿的博客](https://erlangtui.top)<br>
