--- a/docs/01.语言/01.Go/13.context.md
+++ b/docs/01.语言/01.Go/13.context.md
@@ -660,7 +660,7 @@ func (c *valueCtx) Value(key interface{}) interface{} {
 :::
 
 ### 9，各上下文结构之间的关系
-![Context](https://jsd.cdn.zzko.cn/gh/erlangtui/img-bed@master/go/image.4lcybsu8ttk0.png)
+![Context](https://jsd.cdn.zzko.cn/gh/erlangtui/img-bed@master/go/context.3gd9uhfvkbc0.png)
 
 > **参考文章**<br>
 > [1] [一文掌握 Go 并发模式 Context 上下文](https://juejin.cn/post/7233981178101186619)<br>
