--- a/docs/01.语言/01.Go/14.chan.md
+++ b/docs/01.语言/01.Go/14.chan.md
@@ -123,7 +123,7 @@ func (q *waitq) dequeue() *sudog {
 
 		// 如果一个 goroutine 因为 select 而被放到这个队列上，那么在被不同情况唤醒的 goroutine 和它抓取通道锁之间有一个小窗口。
 		// 一旦它有了锁，它就会将自己从队列中删除，所以之后我们不会看到它。
-		// 我们在 G 结构中使用一个标志来发出这个 goroutine 的信号，其他人何时赢得了竞争但 goroutine 还没有将自己从队列中删除
+		// 在 G 结构中使用一个标志来发出这个 goroutine 的信号，其他人何时赢得了竞争但 goroutine 还没有将自己从队列中删除
 		if sgp.isSelect && !atomic.Cas(&sgp.g.selectDone, 0, 1) {
 			continue
 		}
@@ -146,7 +146,6 @@ func (q *waitq) dequeue() *sudog {
 ```go
 func makechan(t *chantype, size int) *hchan {
 	elem := t.elem
-
 	// 编译器校验类型，但是是非安全的
 	if elem.size >= 1<<16 { // 元素类型判断
 		throw("makechan: invalid channel element type")
@@ -155,23 +154,18 @@ func makechan(t *chantype, size int) *hchan {
 	if hchanSize%maxAlign != 0 || elem.align > maxAlign {
 		throw("makechan: bad alignment")
 	}
-
 	// chan大小乘以元素大小，得到要分配的内存大小，需要判断乘积是溢出，以及是否超过了最大内存分配等
 	mem, overflow := math.MulUintptr(elem.size, uintptr(size))
 	if overflow || mem > maxAlloc-hchanSize || size < 0 {
 		panic(plainError("makechan: size out of range"))
 	}
 
-	// 当存储在 buf 中的元素不包含指针时，Hchan 不包含对 GC 感兴趣的指针。指向相同的分配的buf中elemtype是持久的。
-	// SudoG's 是从其所属线程引用的，因此无法收集它们。
 	// 如果 hchan 结构体中不含指针，GC 就不会扫描 chan 中的元素
 	var c *hchan
 	switch {
 	case mem == 0:
 		// 当chan为无缓冲或元素为空结构体时，需要分配的内存为0，仅分配需要存储chan的内存
-		// Queue or element size is zero.
 		c = (*hchan)(mallocgc(hchanSize, nil, true))
-		// Race detector uses this location for synchronization.
 		c.buf = c.raceaddr()
 	case elem.ptrdata == 0:
 		// 元素不包含指针。在一次调用中分配 hchan 和 buf。
@@ -225,11 +219,6 @@ func chansend(c *hchan, ep unsafe.Pointer, block bool, callerpc uintptr) bool {
 		throw("unreachable")
 	}
 
-	// 快速路径：在不获取锁的情况下检查失败的非阻塞操作。
-	// 在观察到通道未关闭后，我们观察到通道尚未准备好发送。这些观察中的每一个都是单个字大小的读取（第一个c.closed和第二个full（））。
-	// 由于闭合通道无法从“准备发送”过渡到“未准备好发送”，因此即使通道在两个观测值之间关闭，它们也意味着当通道尚未关闭且尚未准备好发送时，两者之间存在一个时刻。
-	// 我们的行为就好像我们当时观察了通道，并报告发送无法继续。如果读取在这里重新排序是可以的：如果我们观察到通道尚未准备好发送，然后观察到它没有关闭，这意味着在第一次观察期间通道没有关闭。
-	// 然而，这里没有任何东西能保证向前推进。我们依靠 chanrecv（） 和 closechan（） 中锁释放的副作用来更新这个线程对 c.closed 和 full（） 的看法。
 	// c 不为 nil，非阻塞模式，且chan没有关闭，但已经满了
 	if !block && c.closed == 0 && full(c) {
 		return false
@@ -284,7 +273,6 @@ func chansend(c *hchan, ep unsafe.Pointer, block bool, callerpc uintptr) bool {
 		return false
 	}
 	// channel 未关闭，且已满，没有接收者，goroutine允许被阻塞，接下来让该 goroutine 阻塞等待
-
 	// 获取当前发送数据的 goroutine，然后绑定到一个 sudog 结构体 (包装为运行时表示)
 	gp := getg()
 	mysg := acquireSudog()
@@ -334,7 +322,27 @@ func chansend(c *hchan, ep unsafe.Pointer, block bool, callerpc uintptr) bool {
 	}
 	return true
 }
+```
 
+:::
+
+- chansend 用于向管道中写入数据，对于当前 goroutine 是否允许被阻塞，分为不同的处理方式；
+- <span style="color: red;">**如果 chan 为 nil，非阻塞模式下直接返回 false，阻塞模式下 goroutine 被挂起，会一直休眠陷入死锁，故直接抛出错误并退出**</span>，错误内容："fatal error: all goroutines are asleep - deadlock!"；
+- 如果 chan 不为 nil，非阻塞模式，且 chan 没有关闭，但已经满了，则直接返回 false，即在不获取锁的情况下快速处理；
+- <span style="color: red;">**如果 chan 已经关闭，则直接 panic，即向一个关闭的通道写入数据会 panic**</span>；
+- 尝试从阻塞等待的消费者队列中取出一个 goroutine：
+  - 如果能够能够取到，无论是阻塞模式还是非阻塞模式，<span style="color: red;">**直接将数据从生产者的 goroutine 拷贝到消费者的 goroutine**</span> 并提前返回 true；
+  - 如果当前管道是缓冲管道且又能够从消费者队列获取 goroutine 则说明缓冲区为空，<span style="color: red;">**直接拷贝能够避免将数据先从生产者 goroutine 拷贝到缓冲区再从缓冲区拷贝到消费者 goroutine 的二次拷贝带来的性能损耗**</span>；
+- 如果没有消费者，且缓冲区未满，即使非阻塞也是能写则写，直接将数据从生产者 goroutine 拷贝到缓冲区写入索引处，并更新写入索引和元素个数，提前返回 true；
+- 如果没有消费者，且缓冲区已满，无论是缓冲管道还是非缓冲管道，生产者 goroutine 此时是无法写入数据的，对于非阻塞模式，直接返回 false；
+- 对于阻塞模式，<span style="color: red;">**将该 goroutine 添加到该 chan 的生产者队列，并挂起阻塞等待直到被唤醒**</span>，唤醒的方式分为两种：
+  - <span style="color: red;">**消费者 goroutine 从阻塞等待的生产者队列中获取到该 goroutine 并从其拷贝数据，然后将其唤醒**</span>；
+  - <span style="color: red;">**该 chan 被关闭了，唤醒所有的等待的 goroutine**</span>；
+- 在被其他 goroutine 唤醒前，会先将其从 chan 的生产队列中出队；
+- 被唤醒后，该 goroutine 会与当前的 chan 解除绑定，并判断被唤醒的原因，<span style="color: red;">**如果是因为 chan 关闭而被唤醒则直接 panic，即无法向一个关闭的 chan 写数据**</span>，如果是被其他 goroutine 唤醒则返回 true；
+  
+::: details
+```go
 // send 通过 unlockf 解锁 c，sg 必须已从 c 的消费者队列中出队，ep 必须为非 nil 并指向堆或调用方的堆栈
 func send(c *hchan, sg *sudog, ep unsafe.Pointer, unlockf func(), skip int) {
 	// sg.elem 指向接收到的值存放的位置，如 val <- ch，指的就是 &val
@@ -355,7 +363,6 @@ func send(c *hchan, sg *sudog, ep unsafe.Pointer, unlockf func(), skip int) {
 	// 并把其放入发送方所在处理器 P 的 runnext 字段等待执行，runnext 字段表示最高优先级的 goroutine
 	goready(gp, skip+1)
 }
-
 // src 在当前 goroutine 的栈上，dst 是另一个 goroutine 的栈
 func sendDirect(t *_type, sg *sudog, src unsafe.Pointer) {
 	// 一旦我们从 sg 中读取 sg.elem，如果 dst 的堆栈被复制（缩小），它将不再更新。
@@ -371,24 +378,9 @@ func sendDirect(t *_type, sg *sudog, src unsafe.Pointer) {
 	memmove(dst, src, t.size)
 }
 ```
-
 :::
-
-- chansend 用于向管道中写入数据，对于当前 goroutine 是否允许被阻塞，分为不同的处理方式；
-- <span style="color: red;">**如果 chan 为 nil，非阻塞模式下直接返回，阻塞模式下 goroutine 被挂起，会一直休眠陷入死锁，故直接抛出错误并退出**</span>，错误内容："fatal error: all goroutines are asleep - deadlock!"；
-- 如果 chan 不为 nil，非阻塞模式，且 chan 没有关闭，但已经满了，则直接返回，即在不获取锁的情况下快速处理；
-- <span style="color: red;">**如果 chan 已经关闭，则直接 panic，即向一个关闭的通道写入数据会 panic**</span>；
-- 尝试从消费者队列中取出一个 goroutine：
-  - 如果能够能够取到，无论是阻塞模式还是非阻塞模式，<span style="color: red;">**直接将数据从生产者的 goroutine 拷贝到消费者的 goroutine**</span> 并提前返回；
-  - 如果当前管道是缓冲管道且又能够从消费者队列获取 goroutine 则说明缓冲区为空，<span style="color: red;">**直接拷贝能够避免将数据先从生产者 goroutine 拷贝到缓冲区再从缓冲区拷贝到消费者 goroutine 的二次拷贝带来的性能损耗**</span>；
-- 如果没有消费者，且缓冲区未满，即使非阻塞也是能写则写，直接将数据从生产者 goroutine 拷贝到缓冲区写入索引处，并更新写入索引和元素个数，提前返回；
-- 如果没有消费者，且缓冲区已满，无论是缓冲管道还是非缓冲管道，生产者 goroutine 此时是无法写入数据的，对于非阻塞模式，直接返回；
-- 对于阻塞模式，<span style="color: red;">**将该 goroutine 添加到该 chan 的生产者队列，并挂起阻塞等待直到被唤醒**</span>，唤醒的方式分为两种：
-  - <span style="color: red;">**消费者 goroutine 从生产者队列中获取到该 goroutine 并从其拷贝数据，将其唤醒**</span>；
-  - <span style="color: red;">**该 chan 被关闭了，唤醒所有的等待的 goroutine**</span>；
-- 在被其他 goroutine 唤醒前，会先将其从 chan 的生产队列中出队；
-- 被唤醒后，该 goroutine 会与当前的 chan 解除绑定，并判断被唤醒的原因，<span style="color: red;">**如果是因为 chan 关闭而被唤醒则直接 panic，即无法向一个关闭的 chan 写数据**</span>；
-- send 处理空管道 c 上的写入操作，生产者 goroutine 上待写入的值 ep 被复制到消费者 sg，然后该消费者被唤醒，管道 c 必须为空并锁定（此时才能直接在生产者和消费者两个 goroutine 之间拷贝数据）；
+- send 处理空管道 c 上的写入操作，<span style="color: red;">**生产者 goroutine 上待写入的值 ep 被复制到消费者 sg，管道 c 必须为空并锁定（此时才能直接在生产者和消费者两个 goroutine 之间拷贝数据）**</span>；
+- 同时将 <span style="color: red;">**sg.success 设置为 true，表示该消费者 goroutine 是因为读到了数据而被唤醒，然后唤醒该 goroutine**</span>；
 
 ::: tip
 1，对于缓冲管道，当消费队列不为空时，说明管道中没有数据；当生产队列不为空时，说明管道已经满了；（不可能同时存在消费队列和生产队列都不为空的情况？？？）<br>
@@ -396,9 +388,7 @@ func sendDirect(t *_type, sg *sudog, src unsafe.Pointer) {
 :::
 
 ### 5，chanrecv
-
 ::: details
-
 ```go
 // <- c 代码的编译入口
 func chanrecv1(c *hchan, elem unsafe.Pointer) {
@@ -409,24 +399,9 @@ func chanrecv2(c *hchan, elem unsafe.Pointer) (received bool) {
 	_, received = chanrecv(c, elem, true)
 	return
 }
-
-// chanrecv 从管道 c 上接收数据并写到 ep 上，ep 可能为 nil，这种情况下接收到的数据会被忽略
-// 如果 block 为 false 并且没有可用的元素，返回 false，false
-// 否则，如果 c 是关闭的，则将 ep 置零，返回 true，false
-// 否则，用一个元素填充 ep 并返回 true，true，一个非空的 ep 必须指向堆或调用者的栈
-// 如果 channel == nil, 非阻塞模式直接返回，阻塞模式，休眠当前 goroutine，并报错
-// 如果 channel 已经关闭或者缓冲区没有等待接收的数据，直接返回
-// 如果 channel 发送队列不为空, 说明没有缓冲区或缓冲区已满
-// 		从发送队列获取第一个发送者协程
-// 		如果是无缓冲区，直接从发送 goroutine 拷贝数据到接收数据的地址
-// 否则，缓冲区已满，从接收队列头部的 goroutine 开始接收数据，并将数据添加到发送队列尾部的 goroutine
-// 如果 channel 缓冲区有数据，直接从缓冲区读取数据
-// 如果以上条件都不满足，就获取一个新的 sudog 结构体并放入 channel 的接收队列，同时挂起当前发送数据的 goroutine, 进入休眠 (等待发送方发送数据)
+// selected 表示该 goroutine 是否被选中，用于 select 函数的 case 判断
+// recevied 表示是否成功从 c 中接收到数据
 func chanrecv(c *hchan, ep unsafe.Pointer, block bool) (selected, received bool) {
-	if debugChan {
-		print("chanrecv: chan=", c, "\n")
-	}
-
 	if c == nil {
 		if !block {
 			return // channel 为 nil，非阻塞模式下直接返回
@@ -468,20 +443,14 @@ func chanrecv(c *hchan, ep unsafe.Pointer, block bool) (selected, received bool)
 
 	// channel 已经关闭，且没有数据
 	if c.closed != 0 && c.qcount == 0 {
-		if raceenabled {
-			raceacquire(c.raceaddr())
-		}
-		// 解锁
-		unlock(&c.lock)
+		unlock(&c.lock) // 解锁
 		if ep != nil {
-			// 清理 ep 指针中的数据
-			typedmemclr(c.elemtype, ep)
+			typedmemclr(c.elemtype, ep) // 清理 ep 指针中的数据
 		}
 		return true, false
 	}
 
 	// channel 未关闭，或关闭了但是还有数据
-
 	// 还有阻塞的发送者协程，说明没有缓冲区或是缓冲区已满
 	if sg := c.sendq.dequeue(); sg != nil {
 		// 从发送队列获取第一个发送者协程
@@ -495,9 +464,6 @@ func chanrecv(c *hchan, ep unsafe.Pointer, block bool) (selected, received bool)
 	if c.qcount > 0 {
 		// 根据可消费数据的索引直接获取到要消费的数据的地址
 		qp := chanbuf(c, c.recvx)
-		if raceenabled {
-			racenotify(c, c.recvx, nil)
-		}
 		if ep != nil {
 			// 直接从缓冲区的地址上拷贝数据到接收数据的地址
 			typedmemmove(c.elemtype, ep, qp)
@@ -559,7 +525,24 @@ func chanrecv(c *hchan, ep unsafe.Pointer, block bool) (selected, received bool)
 	releaseSudog(mysg) // 释放 sudog
 	return true, success
 }
+```
+:::
+* chanrecv 用于从管道中接收数据，与 chansend 一样，对于当前 goroutine 是否允许被阻塞，分为不同的处理方式：
+* <span style="color: red;">**如果 chan 为 nil，非阻塞模式下直接返回 false、false，阻塞模式下 goroutine 被挂起，会一直休眠陷入死锁，故直接抛出错误并退出**</span>；
+* 如果 chan 不为 nil，非阻塞模式下，且 chan 为空，如果 chan 没关闭，则直接返回 false、false；如果 chan 已经关闭，则清理 ep 指针中的数据，并返回 true、false；
+* 如果 chan 已经关闭，且无数据，对阻塞模式，同样是清理 ep 指针中的数据，并返回 true、false；
+* 如果 chan 未关闭，或是已经关闭了但还有数据，则尝试从阻塞等待的生产队列中取出一个goroutine：
+  * 如果能够能够取到，无论是阻塞模式还是非阻塞模式，<span style="color: red;">**直接将数据从生产者的 goroutine 拷贝到消费者的 goroutine**</span> 并提前返回 true、true，同上能够避免二次拷贝；
+* 如果没有生产者，且缓冲区还有数据，即使非阻塞型也是能读则读，直接将数据从缓冲区读出索引出拷贝到消费者 goroutine，并封信读出索引和元素个数，提前返回 true、true；
+* 没有生产者，缓冲区没有数据，无论是缓冲管道还是非缓冲管道，消费者 goroutine 此时是无法读取到数据的，对于非阻塞模式，直接返回 false、false；
+* 对于阻塞模式，<span style="color: red;">**将该 goroutine 添加到该 chan 的消费者队列，并挂起阻塞等待直到被唤醒**</span>，唤醒的方式分为两种：
+  - <span style="color: red;">**生产者 goroutine 从阻塞等待的消费者队列中获取到该 goroutine 并拷贝数据给它，然后将其唤醒**</span>；
+  - <span style="color: red;">**该 chan 被关闭了，唤醒所有的等待的 goroutine**</span>；
+- 在被其他 goroutine 唤醒前，会先将其从 chan 的消费队列中出队；
+- 被唤醒后，该 goroutine 会与当前的 chan 解除绑定，并判断被唤醒的原因，<span style="color: red;">**如果是因为 chan 关闭而被唤醒则返回 true、false，即无法向一个关闭的 chan 写数据**</span>，如果是被其他 goroutine 唤醒则返回 true、true；
 
+::: details
+```go
 // recv 在一个满的 c 上处理一个接收操作。
 // 有两个部分:
 // 	1) 发送方 sg 发送的值被放入 c，然后唤醒发送方，继续它的正常工作。
@@ -619,7 +602,6 @@ func recvDirect(t *_type, sg *sudog, dst unsafe.Pointer) {
 	memmove(dst, src, t.size)
 }
 ```
-
 :::
 
 ### 6，closechan
