--- a/docs/01.语言/01.Go/14.chan.md
+++ b/docs/01.语言/01.Go/14.chan.md
@@ -343,7 +343,7 @@ func chansend(c *hchan, ep unsafe.Pointer, block bool, callerpc uintptr) bool {
   
 ::: details
 ```go
-// send 通过 unlockf 解锁 c，sg 必须已从 c 的消费者队列中出队，ep 必须为非 nil 并指向堆或调用方的堆栈
+// send 通过 unlockf 解锁 c，sg 必须已从 c 的消费者队列中出队，ep 必须为非 nil 并指向堆或调用方的堆栈，c 必须是无缓冲或是空的
 func send(c *hchan, sg *sudog, ep unsafe.Pointer, unlockf func(), skip int) {
 	// sg.elem 指向接收到的值存放的位置，如 val <- ch，指的就是 &val
 	if sg.elem != nil {
@@ -379,7 +379,7 @@ func sendDirect(t *_type, sg *sudog, src unsafe.Pointer) {
 }
 ```
 :::
-- send 处理空管道 c 上的写入操作，<span style="color: red;">**生产者 goroutine 上待写入的值 ep 被复制到消费者 sg，管道 c 必须为空并锁定（此时才能直接在生产者和消费者两个 goroutine 之间拷贝数据）**</span>；
+- send 处理无缓冲区或是空管道 c 上的写入操作，**生产者 goroutine 上待写入的值 ep 被复制到消费者 sg，管道 c 必须为空并锁定（此时才能直接在生产者和消费者两个 goroutine 之间拷贝数据）**；
 - 同时将 <span style="color: red;">**sg.success 设置为 true，表示该消费者 goroutine 是因为读到了数据而被唤醒，然后唤醒该 goroutine**</span>；
 
 ::: tip
@@ -543,30 +543,17 @@ func chanrecv(c *hchan, ep unsafe.Pointer, block bool) (selected, received bool)
 
 ::: details
 ```go
-// recv 在一个满的 c 上处理一个接收操作。
-// 有两个部分:
-// 	1) 发送方 sg 发送的值被放入 c，然后唤醒发送方，继续它的正常工作。
-// 	2) 接收方接收到的值(当前G)写入 ep。
-// 对于同步通道，两个值是相同的。对于异步信道，接收方从 c 缓冲区获取数据，发送方的数据放入 c 缓冲区。
-// 通道 c 必须是满的和锁定的。recv 用 unlockf 解锁 c。
-// sg 必须已经从 c 出队。非 nil 的 ep 必须指向堆或调用者的堆栈。
+// recv 用 unlockf 解锁 c，sg 必须已经从 c 出队，非 nil 的 ep 必须指向堆或调用者的堆栈，c 必须是无缓冲或是满的
 func recv(c *hchan, sg *sudog, ep unsafe.Pointer, unlockf func(), skip int) {
 	// 还有阻塞的发送者协程，说明没有缓冲区或是缓冲区已满
 	if c.dataqsiz == 0 {
 		// 无缓冲区
-		if raceenabled {
-			racesync(c, sg)
-		}
 		if ep != nil {
 			recvDirect(c.elemtype, sg, ep) // 直接从发送者 goroutine 将数据拷贝到接收者 goroutine 的 ep 上
 		}
 	} else {
 		// 缓冲区已满，从消费索引处获取数据的指针
 		qp := chanbuf(c, c.recvx)
-		if raceenabled {
-			racenotify(c, c.recvx, nil)
-			racenotify(c, c.recvx, sg)
-		}
 		if ep != nil {
 			// 将消费索引处的数据拷贝到接收数据的指针
 			typedmemmove(c.elemtype, ep, qp)
@@ -603,16 +590,15 @@ func recvDirect(t *_type, sg *sudog, dst unsafe.Pointer) {
 }
 ```
 :::
+* recv 处理无缓冲区或是满管道 c 上的读出操作，对于无缓冲管道，直接从生产者 goroutine 拷贝数据到消费者 goroutine
+* 对于缓冲性满管道，写入和读出索引是相同的，直接从管道的读出索引处拷贝数据到消费者者 goroutine，并从生产者 goroutine 拷贝数据到管道的该处，同时更新生产和写入索引；
+* 将发送者协程的数据指针置空，并将 sg.success 置为 true，表示该生产者 goroutine 是因为写入值成功而被唤醒，然后唤醒该 goroutine；
 
 ### 6，closechan
 
 ::: details
 
 ```go
-// 关闭 channel 后，对于等待接收者而言，会收到一个相应类型的零值。对于等待发送者，会直接 panic。
-// 所以，在不了解 channel 还有没有接收者的情况下，不能贸然关闭 channel。
-// close 函数先上一把大锁，接着把所有挂在这个 channel 上的 sender 和 receiver 全都连成一个 sudog 链表，再解锁。最后，再将所有的 sudog 全都唤醒。
-// 唤醒之后，该干嘛干嘛。sender 会继续执行 chansend 函数里 goparkunlock 函数之后的代码，很不幸，检测到 channel 已经关闭了，panic。receiver 则比较幸运，进行一些扫尾工作后，
 func closechan(c *hchan) {
 	if c == nil { // todo 关闭一个空的 chan 会 panic
 		panic(plainError("close of nil channel"))
@@ -622,12 +608,6 @@ func closechan(c *hchan) {
 	if c.closed != 0 { // todo 关闭一个已经关闭的 chan 会 panic
 		unlock(&c.lock)
 		panic(plainError("close of closed channel"))
-	}
-
-	if raceenabled {
-		callerpc := getcallerpc()
-		racewritepc(c.raceaddr(), callerpc, funcPC(closechan))
-		racerelease(c.raceaddr())
 	}
 
 	c.closed = 1    // 设置 channel 状态为已关闭
@@ -654,9 +634,6 @@ func closechan(c *hchan) {
 		gp := sg.g
 		gp.param = unsafe.Pointer(sg)
 		sg.success = false // todo import 因为关闭而唤醒，设为false
-		if raceenabled {
-			raceacquireg(gp, c.raceaddr())
-		}
 		glist.push(gp) // 将 sg 对应的 goroutine 添加到 glist 列表
 
 	}
@@ -677,10 +654,6 @@ func closechan(c *hchan) {
 		gp := sg.g
 		gp.param = unsafe.Pointer(sg)
 		sg.success = false // todo import 因为关闭而唤醒，设为false
-		if raceenabled {
-			raceacquireg(gp, c.raceaddr())
-		}
-
 		glist.push(gp) // 将 sg 对应的 goroutine 添加到 glist 列表
 	}
 
@@ -699,9 +672,12 @@ func closechan(c *hchan) {
 ```
 
 :::
+* close 函数用于关闭管道 c，如果 c 是 nil 管道，直接 panic，关闭一个 nil 的 chan 会 panic；
+* close 函数先上一把大锁，将 c 设置为关闭状态，将所有阻塞等待的消费者 goroutine 出队，赋给其一个相应类型的零值，并设置 sg.success 为 false，表示是因为管道关闭而被唤醒的，然后将该 goroutine加入到一个链表中；将所有阻塞等待的生产者 goroutine 出队，同样设置 sg.success 为 false，表示是因为管道关闭而被唤醒的，然后将该 goroutine加入到一个链表中；解锁，然后将该链表中的所有 goroutine 唤醒；
+* 被唤醒后，生产者 goroutine 会继续执行 chansend 函数里 goparkunlock 函数之后的代码，检测到自己是因为 chan 关闭而被唤醒的，直接 panic；消费者 goroutine 同样会继续执行 chanrecv 函数里 goparkunlock 函数之后的代码，检测到自己是因为 chan 关闭而被唤醒的，返回 received 为 false，表示读取的是零值；
+* 关闭 chan 后，对于阻塞等待的消费者而言，会收到一个相应类型的零值，对于阻塞等待的生产者而言，会直接 panic，所以，在不了解 chan 还有没有接收者的情况下，不能贸然关闭 chan；
 
 ### 7，selectnb\*
-
 ::: details
 
 ```go
@@ -727,7 +703,15 @@ func closechan(c *hchan) {
 func selectnbsend(c *hchan, elem unsafe.Pointer) (selected bool) {
 	return chansend(c, elem, false, getcallerpc())
 }
+```
 
+:::
+* 在 select 中监听向
+
+
+::: details
+
+```go
 // compiler implements
 //
 //	select {
@@ -757,7 +741,6 @@ func selectnbrecv(elem unsafe.Pointer, c *hchan) (selected, received bool) {
 :::
 
 ### 8，辅助函数
-
 :::details
 
 ```go
@@ -766,9 +749,7 @@ func chanbuf(c *hchan, i uint) unsafe.Pointer {
 	return add(c.buf, uintptr(i)*uintptr(c.elemsize))
 }
 
-// full 函数检测 channel 缓冲区是否已满，主要分为两种情况:
-// 如果 channel 没有缓冲区，查看是否存在接收者
-// 如果 channel 有缓冲区, 比较元素数量和缓冲区长度是否一致
+// full 函数检测 channel 缓冲区是否已满
 func full(c *hchan) bool {
 	// c.dataqsiz 是不可变的（在创建通道后永远不会写入），因此在通道操作期间随时读取是安全的。
 	if c.dataqsiz == 0 {
@@ -802,5 +783,10 @@ func chanparkcommit(gp *g, chanLock unsafe.Pointer) bool {
 ```
 
 :::
+
+* chanbuf 通过指针运算获取 chan 缓冲区中的第 i 个位置上的元素
+* full 函数判断 chan 是否已满，如果没有缓冲区，则查看是否存在消费者；如果有缓冲区, 则比较元素数量和缓冲区长度是否一致；
+* empty 判断 chan 是否为空，如果没有缓冲区，则查看是否存在生产者；如果有缓冲区，则判断元素数量是否为 0；
+* chanparkcommit 用于实现 goroutine 在 chan 上的阻塞和唤醒机制；
 
 > **参考文章**<br> > [1] [二郎腿的博客](https://erlangtui.top)<br>
